Création du package servlets et de la ServletInscription

--- a/src/main/webapp/inscription.html
+++ b/src/main/webapp/inscription.html
@@ -17,14 +17,14 @@
 	<main>
 		<h1>Mon profil</h1>
 		<div class="container">
-			<form action="#" method="post">
+			<form action="/ServletInscription" method="post">
 				<div class="row justify-content-md-left">
 					<div class="col col-md-2"><label for="pseudo">Pseudo : </label></div><div class="col col-md-3"><input type="text" id="pseudo" name="pseudo"></div>
 					<div class="col col-md-2"><label for="nom">Nom : </label></div><div class="col col-md-3"><input type="text" id="nom" name="nom"></div>
 				</div>
 				<div class="row justify-content-md-left">
 					<div class="col col-md-2"><label for="prenom">Prénom : </label></div><div class="col col-md-3"><input type="text" id="prenom" name="prenom"></div>
-					<div class="col col-md-2"><label for="email">Email : </label></div><div class="col col-md-3"><input type="text" id="email" name="email"></div>
+					<div class="col col-md-2"><label for="email">Email : </label></div><div class="col col-md-3"><input type="email" id="email" name="email"></div>
 				</div>
 				<div class="row justify-content-md-left">
 					<div class="col col-md-2"><label for="telephone">Téléphone : </label></div><div class="col col-md-3"><input type="text" id="telephone" name="telephone"></div>
@@ -35,8 +35,8 @@
 					<div class="col col-md-2"><label for="ville">Ville : </label></div><div class="col col-md-3"><input type="text" id="ville" name="ville"></div>
 				</div>
 				<div class="row justify-content-md-left">
-					<div class="col col-md-2"><label for="mot-de-passe">Mot de passe : </label></div><div class="col col-md-3"><input type="text" id="mot-de-passe" name="mot-de-passe"></div>
-					<div class="col col-md-2"><label for="confirmation">Confirmation : </label></div><div class="col col-md-3"><input type="text" id="confirmation" name="confirmation"></div>
+					<div class="col col-md-2"><label for="mot-de-passe">Mot de passe : </label></div><div class="col col-md-3"><input type="password" id="mot-de-passe" name="mot-de-passe"></div>
+					<div class="col col-md-2"><label for="confirmation">Confirmation : </label></div><div class="col col-md-3"><input type="password" id="confirmation" name="confirmation"></div>
 				</div>
 				<div class="row">
 					<div class="col"></div>
